# Threat-Intel-Slack-Bot

./: .gitignore  LICENSE  README.md  README.rst  lambda_handler.py  query.py  requirements.txt  secrets.yml  serverless.yml  setup.cfg  vt.py
tests/: test_passivetotal.py
tisb/: aws.py  passivetotal.py  slashmessage.py  virustotal.py
