[metadata]
name = tisb
version = 1.0.0
description = Threat Intelligence Slack Bot
author = Ronald Eddings
author_email = ron@secdevops.ai
url = https://github.com/secdevopsai/Threat-Intel-Slack-Bot
download_url = https://github.com/secdevopsai/Threat-Intel-Slack-Bot/archive/master.zip
classifiers =
	Development Status :: Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Security
	Topic :: Security :: Threat Intelligence


[options]
packages = tisb
install_requires =
	slackclient
	requests
